<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tools.ToolsFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_tools"
            tools:src="@drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/fragment_tools_description"
            android:textColor="@color/colorPrimaryText" />

        <Button
            android:id="@+id/button_tempo_table"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_menu_gallery"
            android:drawablePadding="10sp"
            android:text="@string/menu_tempo_table"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryText" />

    </LinearLayout>

</ScrollView>